# MiyadaikuEngine1.0

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MiyadaikuEditor_Build.sln  MiyadaikuEngine.sln  README.md  ThirdPartyLicense.txt
.github/workflows/: build.yml
Assets/: BuildScripts.bat  BulletController.cs  CSBuild.sln  CSFileList.txt  CSScript.csproj  Class1.cs  EnemyController.cs  Game.cs  GameConsole.cs  PlayerController.cs
Assets/Effects/Explosion/: fire.efkefc
Assets/Miyadaiku/: Component.cs  EffekseerEmitter.cs  GameObject.cs  Object.cs  Renderable.cs  RenderableMesh.cs  Runtime.cs  Sprite.cs  Transform.cs
Assets/Miyadaiku/Attributes/: SerializeFieldAttribute.cs
Assets/Miyadaiku/Math/: Mathf.cs  Matrix.cs  Quaternion.cs  Vector3.cs
Assets/Models/DrumCan/: DrumCan.blend  DrumCan.blend1  DrumCan.gltf  DrumCan.mdm  DrumCan.mtl  DrumCan_Color.psd
Assets/Models/Ground/: ground.blend  ground.gltf
Assets/Models/Sky/: Sky.blend  Sky.gltf
Assets/Properties/: AssemblyInfo.cs
Assets/Shaders/: Unlit_PS.hlsl  Unlit_VS.hlsl
MiyadaikuEditor/: App.xaml  MainWindow.xaml  packages.config
Scripts/: GenerateProjects.bat  GenerateProjects_Application.bat  GenerateProjects_Editor.bat  GenerateProjects_Test.bat
Src/: .clang-format  CMakeLists.txt
Src/Application/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
Src/Application/Test/: CMakeLists.txt  main.cpp
Src/Editor/: CMakeLists.txt  MiyadaikuEditor.sln
Src/Editor/App/: App.xaml.cs  MainWindow.xaml.cs  MiyadaikuEditor.csproj
Src/Editor/App/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Src/Editor/EditorCore/: EditorCore.csproj  EditorCoreModule.cs
Src/Editor/EditorCore/Controls/ViewModels/: FieldViewModel.cs  Vector3ViewModel.cs
Src/Editor/EditorCore/Controls/Views/: Vector3.xaml  Vector3.xaml.cs
Src/Editor/EditorCore/IPC/: IPCManager.cs
Src/Editor/MiyadaikuEditor/: App.xaml  App.xaml.cs  Editor.csproj  MiyadaikuEditor.csproj
Src/Editor/MiyadaikuEditor/Core/Controls/Models/: FloatModel.cs  Vector3Model.cs
Src/Editor/MiyadaikuEditor/Core/Controls/Utils/: FieldControlUtils.cs
Src/Editor/MiyadaikuEditor/Core/Controls/ViewModels/: FieldViewModel.cs  FloatViewModel.cs  Vector3ViewModel.cs
Src/Editor/MiyadaikuEditor/Core/Controls/Views/: FloatView.xaml  FloatView.xaml.cs  Vector3.xaml  Vector3.xaml.cs  Vector3View.xaml  Vector3View.xaml.cs
Src/Editor/MiyadaikuEditor/Core/IPC/: IPCManager.cs
Src/Editor/MiyadaikuEditor/Core/IPC/Command/: GetComponentTypeInfosCommand.cs  GetComponentsCommand.cs  MessageBase.cs  SetUpIPCCommand.cs  SetUpIPCMessage.cs
Src/Editor/MiyadaikuEditor/EditorResources/: App.config
Src/Editor/MiyadaikuEditor/Models/: ComponentModel.cs
Src/Editor/MiyadaikuEditor/Properties/: Resources.Designer.cs  Resources.resx
Src/Editor/MiyadaikuEditor/ViewModels/: ComponentViewModel.cs  InspectorViewModel.cs  MainWindowViewModel.cs  RuntimeViewModel.cs
Src/Editor/MiyadaikuEditor/Views/: ComponentView.xaml  ComponentView.xaml.cs  InspectorView.xaml  InspectorView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RuntimeView.xaml  RuntimeView.xaml.cs
Src/Runtime/: CMakeLists.txt  NativeRuntimeMain.cpp
Src/Runtime/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Subsystem.cpp  Subsystem.h
Src/Runtime/Core/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Rectangle.cpp  Rectangle.h  RectangleI.h  Vector2.cpp  Vector2.h  Vector2I.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Src/Runtime/Core/Object/: Object.cpp  Object.h
Src/Runtime/Core/Platform/: Platform.cpp  Platform.h  Window.h
Src/Runtime/Core/Platform/Windows/: Window_Windows.cpp  Window_Windows.h
Src/Runtime/Core/Timer/: Timer.cpp  Timer.h
Src/Runtime/Effect/: Effect.cpp  Effect.h  EffekseerEffect.h
Src/Runtime/IPC/: IPC.cpp  IPC.h  IPCSocket.cpp  IPCSocket.h
Src/Runtime/IPC/Command/: IPCCommand.cpp  IPCCommand.h  IPCCommand_GetComponentTypeInfos.cpp  IPCCommand_GetComponentTypeInfos.h  IPCCommand_GetComponents.cpp  IPCCommand_GetComponents.h  IPCCommand_SetUpIPC.cpp  IPCCommand_SetUpIPC.h
Src/Runtime/Rendering/: CommonConstantBuffer.cpp  CommonConstantBuffer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RenderingResource.h
Src/Runtime/Rendering/RHI/: RHI_CommandList.h  RHI_ConstantBuffer.cpp  RHI_ConstantBuffer.h  RHI_Device.cpp  RHI_Device.h  RHI_IndexBuffer.cpp  RHI_IndexBuffer.h  RHI_InputLayout.h  RHI_PipelineState.h  RHI_RenderState.h  RHI_Shader.h  RHI_SwapChain.cpp  RHI_SwapChain.h  RHI_Texture.cpp  RHI_Texture.h  RHI_VertexBuffer.h
Src/Runtime/Rendering/RHI/D3D11/: D3D11Common.h  D3D11_CommandList.cpp  D3D11_CommandList.h  D3D11_ConstantBuffer.cpp  D3D11_ConstantBuffer.h  D3D11_Device.cpp  D3D11_Device.h  D3D11_IndexBuffer.cpp  D3D11_IndexBuffer.h  D3D11_RenderState.cpp  D3D11_RenderState.h  D3D11_Shader.cpp  D3D11_Shader.h  D3D11_SwapChain.cpp  D3D11_SwapChain.h  D3D11_Texture.cpp  D3D11_Texture.h  D3D11_VertexBuffer.cpp  D3D11_VertexBuffer.h
Src/Runtime/Scripting/: Component.cpp  Component.h  ScriptClassInstance.cpp  ScriptClassInstance.h  ScriptClassTypeInfo.cpp  ScriptClassTypeInfo.h  ScriptCommon.h  ScriptFieldInfo.cpp  ScriptFieldInfo.h  ScriptMethod.cpp  ScriptMethod.h  ScriptPropertyInfo.cpp  ScriptPropertyInfo.h  Scripting.cpp  Scripting.h
Src/Runtime/Test/: Application_Test.cpp  CMakeLists.txt  Engine_Test.cpp  Math_Matrix_Test.cpp  Math_Quaternion_Test.cpp  Math_RectangleI_Test.cpp  Math_Vector2I_Test.cpp  Math_Vector2_Test.cpp  Math_Vector3_Test.cpp  Math_Vector4_Test.cpp  Subsystem_Test.cpp  TestCommon.h  TestEnvironment.cpp  TestEnvironment.h  TestUtils_Math.h  main.cpp
Src/Sandbox/: CMakeLists.txt
Src/Sandbox/UserAssembly/: Base.cs  CMakeLists.txt  UserAssemblyMain.cs  UserScript.cs
